<resources>
    <string name="app_name">Registro de Socios</string>
    <string name="b_next">Continuar</string>
    <string name="b_next_register">Continuar con el Registro</string>
    <string name="b_back">Volver</string>
    <string name="s_wPartner_small">A continuación haga clic en cada cuadrito según la(s) actividad(es) que realice, sólo se le mostrarán los formularios correspondientes según lo que Ud. seleccione.</string>
    <string name="s_wPartner_big">"Bienvenidos al registro de socios(as)</string>
    <string name="s_prod_agroecologica">Producción Agroecológica</string>
    <string name="s_prod_pecuaria">Producción Pecuaria (crianza de animales) </string>
    <string name="s_tranformation">Transformación </string>
    <string name="s_commerce">Comercialización</string>
    <string-array name="sa_children">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="sa_numberList">
        <item>Elija</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string-array name="sa_techn">
        <item>Técnica #1</item>
        <item>Técnica #2</item>
        <item>Técnica #3</item>
    </string-array>
    <string-array name="sa_yes_no">
        <item>Elija</item>
        <item>Sí</item>
        <item>No</item>
    </string-array>
    <string-array name="sa_civil_state">
        <item>Elija</item>
        <item>Soltero(a) con hijos</item>
        <item>Soltero(a) sin hijos</item>
        <item>Casado(a)</item>
        <item>Divorciado(a)</item>
        <item>Viudo(a)</item>
    </string-array>
    <string-array name="sa_type_asoc">
        <item>Elija</item>
        <item>Asociación</item>
        <item>Cooperativa</item>
        <item>Comunidad</item>
    </string-array>
    <string-array name="sa_empty">
        <item>Elija</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string-array name="sa_type_house">
        <item>Elija</item>
        <item>Propia</item>
        <item>Alquilada</item>
        <item>Privada</item>
    </string-array>
    <string-array name="sa_type_size">
        <item>Elija</item>
        <item>Metros cuadrados</item>
        <item>Yugadas</item>
        <item>Hectáreas</item>
    </string-array>
    <string-array name="sa_type_cert_agro">
        <item>Elija</item>
        <item>Sistema de  Garantía Participativa (SGP)</item>
        <item>Empresa de terceros</item>
    </string-array>
    <string-array name="sa_total_animals">
        <item>Elija</item>
        <item>De 1 a 25</item>
        <item>De 26 a 50</item>
        <item>De 51 a 75</item>
        <item>De 71 a 100</item>
        <item>De 101 a más</item>
    </string-array>
    <string-array name="sa_percentage">
        <item>Elija</item>
        <item>0</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string-array name="sa_grow_care">
        <item>Elija</item>
        <item>Tradicional</item>
        <item>Tecnificada</item>
        <item>Semi Tecnificada</item>
    </string-array>
    <string-array name="sa_food">
        <item>Leche</item>
        <item>Huevos</item>
        <item>Lana</item>
    </string-array>
    <string-array name="sa_type_cert_live">
        <item>Elija</item>
        <item>Empresa</item>
        <item>SGP</item>
    </string-array>
    <string-array name="sa_kg_lt">
        <item>Elija</item>
        <item>Kg</item>
        <item>Litros</item>
    </string-array>
    <string-array name="sa_frecuency">
        <item>Elija</item>
        <item>Semanal</item>
        <item>Mensual</item>
        <item>Anual</item>
    </string-array>
    <string-array name="sa_tax">
        <item>Elija</item>
        <item>Boleta</item>
        <item>Factura</item>
    </string-array>
    <string-array name="sa_partner_condition">
        <item>Elija</item>
        <item>Directivo</item>
        <item>Activo</item>
        <item>Con permiso</item>
    </string-array>
    <string-array name="sa_inscrip">
        <item>Elija</item>
        <item>Inscripción</item>
        <item>Renovación</item>
    </string-array>
    <string-array name="sa_bougth">
        <item>Elija</item>
        <item>Es comprado</item>
        <item>Es propio</item>
    </string-array>
    <string-array name="sa_presentacion">
        <item>Elija</item>
        <item>Botella de medio litro</item>
        <item>Botella de un litro</item>
        <item>Caja</item>
    </string-array>
    <string-array name="sa_month">
        <item>Elija</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="sa_gender">
        <item>Elija</item>
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string name="s_date_phone">
        Fecha de registro de solicitud para ser socio de ANPE: <b>2018-02-09</b>
    </string>
    <string name="s_code">
        Su código de socio sería en caso de ser aceptado: <b>LI1700001</b>
    </string>
    <string-array name="sa_type_animal">
        <item>Elija</item>
        <item>Vacuno</item>
        <item>Porcino</item>
        <item>Ovino</item>
        <item>Aves</item>
        <item>Psicicultura</item>
        <item>Equino</item>
        <item>Cobayo</item>
        <item>Cunicultura</item>
        <item>Apicultura</item>
    </string-array>
    <string-array name="sa_animal">
        <item>Elija</item>
        <item>Criollo</item>
        <item>Bronswuis</item>
        <item>Holstein</item>
    </string-array>
    <string-array name="sa_type_food">
        <item>Elija</item>
        <item>Pastura natural</item>
        <item>Alfalfa</item>
        <item>Concentrado natural</item>
        <item>Concentrado industrial</item>
    </string-array>
    <string-array name="sa_driving_practice">
        <item>Natural</item>
        <item>Omeopático</item>
        <item>Vacunas</item>
        <item>Cuarentena</item>
        <item>Uso de cal</item>
        <item>Desinfección con fuego/candela</item>
    </string-array>
    <string-array name="sa_feeding_practice">
        <item>Compostaje de estiércol</item>
        <item>Hoyos para desechos inorgánicos</item>
    </string-array>
    <string-array name="sa_other_practice">
        <item>Pastoreo extensivo</item>
        <item>Rotación de pastoreo</item>
    </string-array>
    <string-array name="sa_type_prod_trans">
        <item>Elija</item>
        <item>Néctar</item>
        <item>Mermelada</item>
        <item>Derivado de la caña de azúcar</item>
        <item>Panadería y cafetería</item>
        <item>Bebidas y Licor</item>
        <item>Aceites</item>
        <item>Harinas</item>
        <item>Lácteos</item>
        <item>Condimentos y especias</item>
        <item>Dulces y Snaks</item>
        <item>Suplementos alimenticios</item>
        <item>Carnes y Pescados</item>
        <item>Fibra / Lana</item>
    </string-array>
    <string-array name="sa_prod_trans">
        <item>Elija</item>
        <item>manzana</item>
        <item>durazno</item>
        <item>camu camu</item>
        <item>granadilla</item>
        <item>aguaymanto</item>
        <item>Chirimoya</item>
    </string-array>
    <string-array name="sa_conserv_pract">
        <item>Bocashi</item>
        <item>Compost</item>
        <item>Humus de lombriz</item>
        <item>Biol</item>
        <item>Rotación de cultivos</item>
        <item>Asociación de cultivos</item>
        <item>Terrazas</item>
        <item>Andenes o bancales</item>
        <item>Siembras en curvas de nivel</item>
        <item>Cobertura viva; siembra de leguminosas para la fijación biológica de nitrógeno</item>
        <item>Cobertura Muerta: incorporación de rastrojos, hojarascas</item>
        <item>Majadeo (Corral de animales en campo para abonamiento directo)</item>
    </string-array>
    <string-array name="sa_driv_pract">
        <item>Bocashi</item>
        <item>Compost</item>
        <item>Humus de lombriz</item>
        <item>Biol</item>
        <item>Rotación de cultivos</item>
        <item>Asociación de cultivos</item>
        <item>Terrazas</item>
        <item>Andenes o bancales</item>
        <item>Siembras en curvas de nivel</item>
        <item>Cobertura viva; siembra de leguminosas para la fijación biológica de nitrógeno</item>
        <item>Cobertura Muerta: incorporación de rastrojos, hojarascas</item>
        <item>Majadeo (Corral de animales en campo para abonamiento directo)</item>
    </string-array>
    <string-array name="sa_other_pract">
        <item>Hoyos para desechos inorgánicos</item>
        <item>Sobre trazo de curvas a nivel y/o desnivel para la construcción de zanjas o acequias, o para la plantación</item>
        <item>Nivel “A”</item>
    </string-array>
    <string-array name="sa_bio">
        <item>Papas nativas</item>
        <item>Leguminosas</item>
        <item>Especies forestales</item>
        <item>Frutales</item>
        <item>Granos andinos</item>
        <item>Plantas medicinales</item>
        <item>Hortalizas</item>
        <item>Crianza de animales menores y mayores</item>
    </string-array>
    <string-array name="sa_group_farm">
        <item>Elija</item>
        <item>Raíces y tuberosas</item>
        <item>Cereales</item>
        <item>Granos andinos</item>
        <item>Leguminosas o legumbres</item>
        <item>Frutas</item>
        <item>Hortalizas</item>
        <item>Nueces y semillas</item>
        <item>Frutos deshidratados</item>
        <item>Plantas ornamentales</item>
        <item>Plantas forestales</item>
        <item>Flores</item>
    </string-array>
    <string-array name="sa_what_farm">
        <item>Elija</item>
        <item>Papa nativa </item>
        <item>Papa comercial</item>
        <item>Oca</item>
        <item>Olluco</item>
        <item>Mashua</item>
        <item>Maca</item>
        <item>Yacon</item>
        <item>Arracacha</item>
        <item>Yuca</item>
        <item>Pituca</item>
        <item>Sacha papa</item>
    </string-array>
    <string-array name="s_opciones_comercio">
        <item>Elija</item>
        <item>Producto Agroecológico</item>
        <item>Producto Pecuario</item>
        <item>Producto Transformado</item>
    </string-array>
</resources>