<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kelly.registerform.view.partner.WelcomePartnerActivity">
    <RelativeLayout
        android:background="@color/colorBackgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_body"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAlignment="center"
                android:text="@string/s_wPartner_big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:textAlignment="center"
                android:text="@string/s_wPartner_small"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/colorBackgroudDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="@color/colorDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:layout_margin="5dp"
                        android:id="@+id/cb_1"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite"
                        android:text="@string/s_prod_agroecologica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <CheckBox
                        android:layout_margin="5dp"
                        android:id="@+id/cb_2"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite"
                        android:text="@string/s_prod_pecuaria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <CheckBox
                        android:layout_margin="5dp"
                        android:id="@+id/cb_3"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite"
                        android:text="@string/s_tranformation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <CheckBox
                        android:layout_margin="5dp"
                        android:id="@+id/cb_4"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite"
                        android:text="@string/s_commerce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/colorBackgroudDetails"
            android:layout_below="@+id/ll_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button

                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:background="@color/colorBlueLightButton"
                android:textColor="@color/colorWhite"
                android:id="@+id/b_next"
                android:text="@string/b_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
